[tool.poetry]
name = "esp-proxy"
version = "0.1.0"
description = ""
authors = ["Bertus <b.wisman@live.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.10.0.84"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
